--- a/src/index.jade
+++ b/src/index.jade
@@ -271,7 +271,7 @@ html(lang='ru')
       +cover('pictures/evil.jpg')
     +slide({name: 'theend', header: "", classes: ''})
       p.end-link(style="position: absolute; bottom: 5%")
-        a.bigger(href="http://bit.ly/tver.io-frameworks" target="_blank") bit.ly/tver.io-frameworks
+        a.bigger(href="http://bit.ly/tver-frameworks" target="_blank") bit.ly/tver-frameworks
         br
         | Александра Шинкевич (
         a(href='https://twitter.com/neesoglasnaja' target="_blank") @neesoglasnaja
