--- a/src/index.jade
+++ b/src/index.jade
@@ -32,7 +32,8 @@ html(lang='ru')
           li.next И Node.js
           li.next Была начальником отдела фронтенда
           li.next Выгорела
-          li.next Уволилась и счастливая безработная
+          li.next Уволилась и 6 месяцев не работала
+          li.next Lead Frontend Developer в Expert Soft
         p(style="margin-top: 70px")
           img.logo(src="pictures/minskcss.png")
           img.logo(src="pictures/minskjs.png")
@@ -57,6 +58,8 @@ html(lang='ru')
     +slide({header: "", classes: "no-page"})
       img.cover(src='pictures/inspiration.gif', style="width: 100%")
     +slide({header: "", classes: "no-page"})
+      +cover('pictures/back.jpg')
+    +slide({header: "", classes: "no-page"})
       a.copyright(href="https://www.youtube.com/watch?v=xPFRUM_oDKA") Andrey Listochkin — Anti hype как не гнаться за технологиями и начать жить
       +cover('pictures/listochkin.jpg')
     +slide({header: "", classes: ""})
@@ -80,6 +83,8 @@ html(lang='ru')
       +cover('pictures/fake_js_logo.jpg')
     +slide({header: "", classes: ""})
       +cover('pictures/true_is_false.jpg')
+    +slide({header: "", classes: ""})
+      img.cover(src="pictures/hard.gif", style="height: 100%")
     +slide({header: "", classes: ""})
       +cover('pictures/esnext.jpg')
     +slide({header: "", classes: "no-page"})
@@ -172,6 +177,8 @@ html(lang='ru')
       +cover('pictures/clients.jpg')
     +slide({header: "", classes: ""})
       +cover('pictures/swift-tweet.jpg')
+    +slide({header: "", classes: ""})
+      +cover('pictures/maked.jpg')
     +slide({header: "", classes: "no-page"})
       img.cover(src="pictures/explosion.gif", style="width: 100%; max-height: none;")
     +slide({header: "", classes: ""})
@@ -226,6 +233,8 @@ html(lang='ru')
       +cover('pictures/vue.jpg')
     +slide({header: "", classes: ""})
       +cover('pictures/angular.jpg')
+    +slide({header: "", classes: ""})
+      +cover('pictures/svelte.png')
     +slide({header: "*Модульность", classes: ""})
       +cover('pictures/period_3.jpg')
     +slide({header: "", classes: ""})
@@ -247,6 +256,8 @@ html(lang='ru')
         li.next Сроки
     +slide({header: "", classes: ""})
       +cover('pictures/quasar_ionic.jpg')
+    +slide({header: "", classes: ""})
+      +cover('pictures/jamstack.jpg')
     +slide({header: "", classes: ""})
       +cover('pictures/community.jpg')
     +slide({header: "Подводя итог", classes: ""})
@@ -271,7 +282,7 @@ html(lang='ru')
       +cover('pictures/evil.jpg')
     +slide({name: 'theend', header: "", classes: ''})
       p.end-link(style="position: absolute; bottom: 5%")
-        a.bigger(href="http://bit.ly/tver-frameworks" target="_blank") bit.ly/tver-frameworks
+        a.bigger(href="http://bit.ly/IWD-frameworks" target="_blank") bit.ly/IWD-frameworks
         br
         | Александра Шинкевич (
         a(href='https://twitter.com/neesoglasnaja' target="_blank") @neesoglasnaja
