--- a/src/index.jade
+++ b/src/index.jade
@@ -86,6 +86,7 @@ html(lang='ru')
     +slide({header: "", classes: ""})
       img.cover(src="pictures/hard.gif", style="height: 100%")
     +slide({header: "", classes: ""})
+      a.copyright(href="http://www.ecma-international.org/ecma-262/10.0/index.html#Title") ECMA-262, 10th edition
       +cover('pictures/esnext.jpg')
     +slide({header: "", classes: "no-page"})
       a.copyright(href="https://kangax.github.io/compat-table/es2016plus/") ECMAScript 2016+ compatibility table
@@ -233,10 +234,10 @@ html(lang='ru')
       +cover('pictures/vue.jpg')
     +slide({header: "", classes: ""})
       +cover('pictures/angular.jpg')
-    +slide({header: "", classes: ""})
-      +cover('pictures/svelte.png')
     +slide({header: "*Модульность", classes: ""})
       +cover('pictures/period_3.jpg')
+    +slide({header: "", classes: ""})
+      +cover('pictures/svelte.png')
     +slide({header: "", classes: ""})
       +cover('pictures/polymer.jpg')
     +slide({header: "Что нужно от современного фреймворка?", classes: ""})
@@ -258,8 +259,6 @@ html(lang='ru')
       +cover('pictures/quasar_ionic.jpg')
     +slide({header: "", classes: ""})
       +cover('pictures/jamstack.jpg')
-    +slide({header: "", classes: ""})
-      +cover('pictures/community.jpg')
     +slide({header: "Подводя итог", classes: ""})
       ul
         li Важен бизнес и его цели
@@ -273,6 +272,8 @@ html(lang='ru')
     +slide({header: "", classes: ""})
       a.copyright(href="https://medium.freecodecamp.org/a-realworld-comparison-of-front-end-frameworks-with-benchmarks-2019-update-4be0d3c78075") RealWorld Comparison
       +cover('pictures/realworld.jpg')
+    +slide({header: "", classes: ""})
+      +cover('pictures/community.jpg')
     +slide({header: "", classes: "no-page"})
       +cover('pictures/bullet.jpg')
       +cover('pictures/no.png')
@@ -282,7 +283,7 @@ html(lang='ru')
     +slide({header: "", classes: ""})
       a.copyright(href="https://github.com/appcypher/awesome-wasm-langs") Awesome WebAssembly Languages
       +cover('pictures/wasm.jpg')
-    +slide({header: "Фронтенд  - это еще и...", classes: ""})
+    +slide({header: "Фронтенд — это ещё и...", classes: ""})
       ul
         li Бэкенд на Node.js
         li.next Мобильная разработка на ReactNative/Ionic/Quasar/...
